--- a/index.html
+++ b/index.html
@@ -18,8 +18,11 @@
 	</head>
 	<body>
 		<div class="container">
-			<div class="row">
-				<div class="col-md-3">Logo</div>
+			<div class="row page-header">
+				<div class="col-md-3">
+					<img class="img-circle" src="http://placehold.it/150/ffa500" alt="orange circle">
+
+				</div>
 				<div class="col-md-9 text-right">
 					<h1>Matthew Byrne</h1>
 					<h3>Front-end Ninja</h3>
@@ -27,7 +30,7 @@
 			</div>
 			<div class="row">
 				<div class="col-md-12">
-					<img class="img-responsive" src="http://placehold.it/1170x300" alt="its a kitten">
+					<img class="img-responsive" src="http://placehold.it/1170x300" alt="its a grey placeholder">
 				</div>
 			</div>
 			<div class="row">
