added font, added logo

--- a/index.html
+++ b/index.html
@@ -14,13 +14,14 @@
 		<title>Matthew's Portfolio Page</title>
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="custom/style.css">
+		<link href='http://fonts.googleapis.com/css?family=Raleway:100' rel='stylesheet' type='text/css'>
 
 	</head>
 	<body>
 		<div class="container">
 			<div class="row page-header">
-				<div class="col-md-3">
-					<img class="img-circle" src="http://placehold.it/150/ffa500" alt="orange circle">
+				<div class="col-md-3 col-sm-12">
+					<img class="img-circle img-responsive" src="http://placehold.it/150/ffa500" alt="orange circle">
 
 				</div>
 				<div class="col-md-9 text-right">
