--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
 		<meta charset="utf-8">
     	<meta http-equiv="X-UA-Compatible" content="IE=edge">
     	<meta name="viewport" content="width=device-width, initial-scale=1">
-
 		<title>Matthew's Portfolio Page</title>
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-		<link rel="stylesheet" type="text/css" href="custom/style.css">
+		<link rel="stylesheet" type="text/css" href="css/style.css">
 		<link href='http://fonts.googleapis.com/css?family=Raleway:100' rel='stylesheet' type='text/css'>
 
 	</head>
@@ -21,17 +20,29 @@
 		<div class="container">
 			<div class="row page-header">
 				<div class="col-md-3 col-sm-12">
-					<img class="img-circle img-responsive" src="http://placehold.it/150/ffa500" alt="orange circle">
-
+					<img id="logo" class="img-circle img-responsive" src="http://placehold.it/80/ffa500" alt="orange circle">
 				</div>
 				<div class="col-md-9 text-right">
+					<img id="tinyLogo" class="img-circle img-responsive" src="http://placehold.it/80/ffa500" alt="orange circle">
 					<h1>Matthew Byrne</h1>
 					<h3>Front-end Ninja</h3>
 				</div>
 			</div>
+
 			<div class="row">
 				<div class="col-md-12">
-					<img class="img-responsive" src="http://placehold.it/1170x300" alt="its a grey placeholder">
+					<ul class="nav nav-pills">
+						<li role="presentation" class="active"><a href="#">Home</a></li>
+						<li role="presentation"><a href="#">Projects</a></li>
+						<li role="presentation"><a href="#">About</a></li>
+					</ul>
+					<hr>
+				</div>
+			</div>
+
+			<div class="row">
+				<div class="col-md-12">
+					<img id="hero" class="img-responsive" src="http://placehold.it/1170x300" alt="its a grey placeholder">
 				</div>
 			</div>
 			<div class="row">
@@ -41,9 +52,21 @@
 			</div>
 			<div class="row">
 				<!-- TODO: Add content, format containers -->
-				<div class="col-md-4">project image</div>
-				<div class="col-md-4">project image</div>
-				<div class="col-md-4">project image</div>
+				<div class="col-md-4">
+					<img class="img-responsive" src="http://placehold.it/360x150" alt="its a grey placeholder">
+					<h4 class="text-center">project title</h4>
+					<p class="text-center"><a href="#">https://github.com/udacity/Appify/</a></p>
+				</div>
+				<div class="col-md-4">
+					<img class="img-responsive" src="http://placehold.it/360x150" alt="its a grey placeholder">
+					<h4 class="text-center">project title</h4>
+					<p class="text-center"><a href="#">https://github.com/udacity/Appify/</a></p>
+				</div>
+				<div class="col-md-4">
+					<img class="img-responsive" src="http://placehold.it/360x150" alt="its a grey placeholder">
+					<h4 class="text-center">project title</h4>
+					<p class="text-center"><a href="#">https://github.com/udacity/Appify/</a></p>
+				</div>
 			</div>
 		</div>
 		<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
